# lyra

./: .gitignore  .gitmodules  demo.sh  download_models.sh  install_apex.sh  pyproject.toml
cosmos_predict1/autoregressive/training/modules/: attention.py
cosmos_predict1/autoregressive/utils/: parallel.py
cosmos_predict1/diffusion/module/: attention.py
