[build-system]
requires = ["setuptools>=40.8.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra"
version = "0.1.0"
description = "Lyra: Generative 3D Scene Reconstruction via Video Diffusion Model Self-Distillation"
readme = "README.md"
authors = [
    {name = "Sherwin Bahmani"},
    {name = "Tianchang Shen"},
    {name = "Jiawei Ren"},
    {name = "Jiahui Huang"},
    {name = "Yifeng Jiang"},
    {name = "Haithem Turki"},
    {name = "Andrea Tagliasacchi"},
    {name = "David B. Lindell"},
    {name = "Zan Gojcic"},
    {name = "Sanja Fidler"},
    {name = "Huan Ling"},
    {name = "Jun Gao"},
    {name = "Xuanchi Ren"},
]
requires-python = ">=3.10.16"
dependencies = [
    "accelerate>=1.10.0",
    "attrs>=25.1.0",
    "better-profanity>=0.7.0",
    "boto3>=1.35.99",
    "causal-conv1d",
    "decord>=0.6.0",
    "deepspeed>=0.17.5",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "flash_attn>=2.7.4.post1",
    "fused-ssim",
    "gsplat",
    "huggingface-hub>=0.29.2",
    "hydra-core>=1.3.2",
    "imageio[pyav,ffmpeg]>=2.37.0",
    "iopath>=0.1.10",
    "ipdb>=0.13.13",
    "kiui>=0.2.17",
    "loguru>=0.7.2",
    "lru-dict>=1.3.0",
    "mamba-ssm",
    "mediapy>=1.2.2",
    "megatron-core>=0.10.0",
    "ml-dtypes>=0.4.1",
    "moge",
    "mpi4py>=4.1.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4,<2",
    "nvidia-ml-py>=12.535.133",
    "omegaconf>=2.3.0",
    "onnx==1.18",
    "opencv-python>=4.10.0.84",
    "openexr>=3.2.3",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "pillow>=11.1.0",
    "pip>=25.2",
    "plyfile>=1.1.2",
    "protobuf>=4.25.3",
    "pynvml>=12.0.0",
    "pyyaml>=6.0.2",
    "retinaface-py>=0.0.2",
    "safetensors>=0.5.3",
    "scikit-image>=0.24.0",
    "sentencepiece>=0.2.0",
    "setuptools>=76.0.0",
    "termcolor>=2.5.0",
    "timm>=1.0.19",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.66.5",
    "transformer-engine[pytorch]>=2.7.0",
    "transformers>=4.49.0",
    "warp-lang>=1.7.2",
]


[tool.uv.sources]
causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d", rev = "v1.4.0" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim", rev = "8bdb59feb7b9a41b1fab625907cb21f5417deaac" }
gsplat = { git = "https://github.com/nerfstudio-project/gsplat", rev = "73fad53c31ec4d6b088470715a63f432990493de" }
moge = { git = "https://github.com/microsoft/MoGe.git", rev = "0286b495230a074aadf1c76cc5c679e943e5d1c6" }
mamba-ssm = { git = "https://github.com/state-spaces/mamba", rev = "v2.2.4" }
